fix for SMR-4 and SMR-7 SMR-4: support for analyzing -XX:+PrintGCDetails GC log SMR-7: support for analyzing -XX:+UseParallelOldGC / -XX:+UseParallelGC GC log